# habit-tracker

./: .env.sample  .flake8  Dockerfile  docker-compose.yml  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_habit_name_alter_habit_owner.py  0003_alter_habit_reward.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_telegram_nickname.py  0003_user_tg_chat_id.py
