[tool.poetry]
name = "habit-tracker"
version = "0.1.0"
description = ""
authors = ["georgii <goqwertys@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.1"
black = "^24.10.0"
psycopg2 = "^2.9.10"
django = "^5.1.4"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
pillow = "^11.1.0"
celery = "^5.4.0"
eventlet = "^0.38.2"
redis = "^5.2.1"
django-celery-beat = "^2.7.0"
requests = "^2.32.3"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py310']

[tool.flake8]
max-line-length = 119
exclude = ['.git', 'venv', 'env', 'build', 'dist']